# potenup3-02_DL

./: .gitattributes  .gitignore  best_model.pth  best_model94.pth  best_model95.pth  best_model98.pth  main.py  pyproject.toml  wt_day10-fastapi.py  wt_day10-model_load.ipynb  wt_day11-restapi_client.ipynb  wt_day12-streamlit.py  wt_day13-model-on-st.py  wt_day7-mnist.ipynb  wt_day7-torch_basics.ipynb  wt_day8-lenet5 구현.ipynb  wt_day8-lenet5 모델 로드.ipynb  wt_day9-fine-tuning+CAM.ipynb  wt_day9-fine-tuning.ipynb  wt_day9-skin diseases.ipynb
models/: LeNet_CNN_all.pth  LeNet_CNN_params.pth  ResNet34_params.pth  checkpoint.pth
runs/20260224-171431/: events.out.tfevents.1771920871.BOOK-JLEII5GPTF.22604.0
runs/Feb23_11-54-17_BOOK-JLEII5GPTF/: events.out.tfevents.1771815257.BOOK-JLEII5GPTF.14156.1
runs/Feb23_14-13-00_BOOK-JLEII5GPTF/: events.out.tfevents.1771823580.BOOK-JLEII5GPTF.14156.2
runs/Feb23_14-22-45_BOOK-JLEII5GPTF/: events.out.tfevents.1771824165.BOOK-JLEII5GPTF.14156.3
runs/Feb23_17-37-42_BOOK-JLEII5GPTF/: events.out.tfevents.1771835862.BOOK-JLEII5GPTF.33296.6
runs/Feb23_17-41-13_BOOK-JLEII5GPTF/: events.out.tfevents.1771836073.BOOK-JLEII5GPTF.33296.7
runs/Feb23_17-47-42_BOOK-JLEII5GPTF/: events.out.tfevents.1771836462.BOOK-JLEII5GPTF.33296.8
runs/Feb24_08-51-53_BOOK-JLEII5GPTF/: events.out.tfevents.1771890713.BOOK-JLEII5GPTF.33296.9
runs/Feb24_08-55-22_BOOK-JLEII5GPTF/: events.out.tfevents.1771890922.BOOK-JLEII5GPTF.33296.10
runs/Feb24_17-21-57_BOOK-JLEII5GPTF/: events.out.tfevents.1771921317.BOOK-JLEII5GPTF.22604.1
(+8 files in other folders)
